{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Jogador",
            "id": "3689b8d4-5f11-4fc0-b277-4cff97dcea88",
            "actions": [
                {
                    "name": "Movement_W_S",
                    "type": "Value",
                    "id": "72e307c6-520c-4e34-aa37-c9f50ed312cb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement_A_D",
                    "type": "Value",
                    "id": "856ac79a-c8db-48c9-bee9-adb1df0de448",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "W/S",
                    "id": "34a38a9d-f5ed-417c-9589-78917f3b1388",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_W_S",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "4a4c43cd-41b9-4baa-b2d5-635247a1180c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_W_S",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "4d6aa5cf-847a-4f93-9f10-44b97fe3737f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_W_S",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3199f8e4-edf7-4e0f-a34b-22bc501b07fc",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_W_S",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Teclado",
                    "id": "1ced8576-b268-48f2-a95e-6e90fba2bf8a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_A_D",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f10d7f8-4a91-4cc9-96e5-63a85612769c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_A_D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "590c7a5b-3f1c-4580-b445-19878994fbe4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_A_D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "370f543c-fad8-45fe-91fa-f03446e359f4",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_A_D",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}